# vellic

./: .dockerignore  .env.example  .gitignore  .graphifyignore  LICENSE  Makefile  README.md  docker-compose.ci.yml  docker-compose.ollama.yml  docker-compose.yml
admin/: Dockerfile  pyproject.toml
admin/app/: arq_pool.py  auth_router.py  crypto.py  db.py  deliveries_router.py  dlq_router.py  features_router.py  main.py  mcp_router.py  prompts_router.py  repos_router.py  settings_router.py  stats_router.py
admin/app/prompts/: inheritance.py  loader.py  models.py  parser.py  renderer.py  schema.py
admin/design/v0.1/: REVIEW.md  index.html  tokens.css
admin/static/: index.html
admin/tests/: conftest.py  test_auth.py  test_deliveries.py  test_dlq.py  test_features.py  test_mcp.py  test_prompts.py  test_repos.py  test_settings.py  test_stats.py  test_webhook_settings.py
api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_pr_reviews_feedback.py  0003_pr_reviews_github_review_id.py  0004_llm_settings.py  0005_admin_config.py  0006_webhook_config.py  0007_feature_flag_overrides.py  0007_mcp_servers.py  0007_pipeline_jobs_repo_pr.py  0007_webhook_dlq.py  0008_pr_reviews_platform_cols.py  0009_webhook_dlq.py  0010_repo_config.py  0011_prompt_overrides.py  0012_plugins.py  0013_mcp_servers.py  0014_llm_configs.py  0015_prompt_overrides_enabled.py  0016_seed_llm_settings.py  0017_webhook_github_token.py
api/app/: arq_pool.py  crypto.py  db.py  features_router.py  flag_store.py  llm_config_router.py  main.py  rate_limit.py  repos_router.py  webhook.py
api/tests/: test_features.py  test_llm_config_router.py  test_main_extras.py  test_pools.py  test_rate_limit.py  test_repos_router.py  test_webhook.py  test_webhook_bitbucket.py  test_webhook_github.py  test_webhook_gitlab.py
worker/: Dockerfile  pyproject.toml
worker/app/: crypto.py  events.py  jobs.py  main.py  mcp_host.py  metrics.py  vcs_tokens.py
worker/app/adapters/: bitbucket.py  github.py  gitlab.py
worker/app/llm/: __init__.py  config.py  db_config.py  protocol.py  registry.py
worker/app/pipeline/: context_gatherer.py  diff_fetcher.py  feedback_poster.py  llm_analyzer.py  models.py  result_persister.py  runner.py
worker/app/prompts/: __init__.py  context_resolver.py  inheritance.py  models.py  parser.py  preset_loader.py  renderer.py  repo_loader.py  schema.py  store.py
worker/app/rules/: __init__.py  evaluator.py  loader.py  models.py
worker/app/security/: ssrf.py
worker/tests/: test_adapters.py  test_ast_context.py  test_bitbucket_adapter.py  test_db_config.py  test_diff_properties.py  test_feature_flags.py  test_feedback_poster.py  test_feedback_poster_bitbucket.py  test_feedback_poster_gitlab.py  test_gitlab_adapter.py  test_jobs_coverage.py  test_llm.py  test_mcp_host.py  test_pipeline.py  test_pipeline_rules_integration.py  test_repo_guard.py  test_retry_dlq.py  test_rules.py  test_runner.py  test_ssrf.py  test_worker_main.py
worker/tests/unit/: test_context_resolver.py  test_preset_loader.py  test_prompts_inheritance.py  test_prompts_parser.py  test_prompts_renderer.py  test_repo_loader.py  test_store.py
(+172 files in other folders)
