[project]
name = "vellic-admin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "arq>=0.25.0",
    "cryptography>=42.0.0",
    "aiofiles>=23.0.0",
    "bcrypt>=4.0.0",
    "PyJWT[crypto]>=2.8.0",
    "pyyaml>=6.0",
    "vellic-flags",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0", "ruff>=0.4.0", "python-multipart>=0.0.9"]

[tool.uv.sources]
vellic-flags = { path = "../packages/vellic_flags" }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
