[project]
name = "vellic-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "arq>=0.25.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "vellic-flags",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "httpx>=0.27.0", "ruff>=0.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
vellic-flags = { path = "../packages/vellic_flags" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
]
